--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,7 +28,8 @@
     mode: 0700
     owner: root
 
-- set_fact:
+- name: Transform borgmatic_configs to a list of dicts
+  set_fact:
     bormgatic_list_dicts_name_config: |
         {% set res = [] -%}
         {% for key, value in borgmatic_configs.items() -%}
