--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
-  author: Javer I. Peralta
+  role_name: borgmatic
+  author: jprltsnz
   description: Sets backups using borg and borgmatic
   # company: your company (optional)
 
@@ -28,13 +29,13 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-  - name: CentOS
+  - name: EL
     versions:
     - 7
     - 8
   - name: Debian
     versions:
-    - 10
+    - all
   - name: Ubuntu
     versions:
     - xenial
