--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: "Include borgmatic"
       include_role:
-        name: "borgmatic"
+        name: jprltsnz.borgmatic
       vars:
         borgmatic_configs:
           backup-etc:
