--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
+        with:
+          path: "jprltsnz.borgmatic"
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
