Set working directory to see if it fixes github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Run Molecule tests.
         run: molecule test
+        working_directory: "${{ GITHUB_WORKSPACE }}/jprltsnz.borgmatic"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
