--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
         run: pip3 install molecule docker yamllint ansible-lint
 
       - name: Run Molecule tests.
+        working-directory: "${{ GITHUB_WORKSPACE }}/jprltsnz.borgmatic"
         run: molecule test
-        working_directory: "${{ GITHUB_WORKSPACE }}/jprltsnz.borgmatic"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
