--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: pip3 install molecule docker yamllint ansible-lint
 
       - name: Run Molecule tests.
-        working-directory: "${{ GITHUB_WORKSPACE }}/jprltsnz.borgmatic"
+        working-directory: "jprltsnz.borgmatic"
         run: molecule test
         env:
           PY_COLORS: '1'
