--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -4,7 +4,7 @@ borgmatic_role_packages:
   - libacl1-dev
   - libacl1
   - build-essential
-  - python-setuptools
+  - python3-setuptools
   - python3-dev
   - python3-pip
   - python3-msgpack
